Fix ReadMe and Repo Organize

--- a/notebooks/cause_of_death.ipynb
+++ b/notebooks/cause_of_death.ipynb
@@ -13,33 +13,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import dependancies\n",
     "import pandas as pd\n",
     "import os\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy.stats as st\n",
     "from scipy.stats import linregress\n",
     "import numpy as np\n",
-    "output_file = 'Resources/combined_data.csv'"
+    "\n",
+    "# create file path to save refined data file\n",
+    "output_file = '../Resources/combined_data.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "        State  Year  Deaths  Population  Crude Rate\n0  California  1999    2959    33499204         8.8\n1  California  2000    3036    33871648         9.0\n2  California  2001    3136    34479458         9.1\n3  California  2002    3344    34871843         9.6\n4  California  2003    3355    35253159         9.5",
+      "text/plain": [
+       "        State  Year  Deaths  Population  Crude Rate\n",
+       "0  California  1999    2959    33499204         8.8\n",
+       "1  California  2000    3036    33871648         9.0\n",
+       "2  California  2001    3136    34479458         9.1\n",
+       "3  California  2002    3344    34871843         9.6\n",
+       "4  California  2003    3355    35253159         9.5"
+      ],
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>State</th>\n      <th>Year</th>\n      <th>Deaths</th>\n      <th>Population</th>\n      <th>Crude Rate</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>California</td>\n      <td>1999</td>\n      <td>2959</td>\n      <td>33499204</td>\n      <td>8.8</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>California</td>\n      <td>2000</td>\n      <td>3036</td>\n      <td>33871648</td>\n      <td>9.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>California</td>\n      <td>2001</td>\n      <td>3136</td>\n      <td>34479458</td>\n      <td>9.1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>California</td>\n      <td>2002</td>\n      <td>3344</td>\n      <td>34871843</td>\n      <td>9.6</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>California</td>\n      <td>2003</td>\n      <td>3355</td>\n      <td>35253159</td>\n      <td>9.5</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 3
     }
    ],
    "source": [
-    "file_path_tx = 'Resources/Tx_cause_of_death_1999-2018.csv'\n",
-    "file_path_ca = 'Resources/Ca_cause_of_death_1999-2018.csv'\n",
+    "# upload raw data and read into pandas dataframe\n",
+    "file_path_tx = '../Resources/Tx_cause_of_death_1999-2018.csv'\n",
+    "file_path_ca = '../Resources/Ca_cause_of_death_1999-2018.csv'\n",
     "tx_death_by_year = pd.read_csv(file_path_tx)\n",
     "ca_death_by_year = pd.read_csv(file_path_ca)\n",
     "ca_death_by_year.head()"
@@ -80,7 +91,10 @@
     }
    ],
    "source": [
+    "# merge files using inner merge on years\n",
     "comp_file = pd.merge(tx_death_by_year, ca_death_by_year, how='left', on=['Year'])\n",
+    "\n",
+    "# save data file\n",
     "comp_file.to_csv(output_file, index=False)\n",
     "comp_file"
    ]
@@ -103,6 +117,7 @@
     }
    ],
    "source": [
+    "# create bar plot for gun related death\n",
     "texas_plot = plt.plot(comp_file['Year'], comp_file['Deaths_x'], marker='+', color='r', label='TX death (1999-2018')\n",
     "calif_plot = plt.plot(comp_file['Year'], comp_file['Deaths_y'], marker='^', color='b', label='CA death (1999-2018')\n",
     "plt.xlabel('Years')\n",
@@ -111,7 +126,7 @@
     "plt.title('TX vs CA Gun Related Death 1999-2018')\n",
     "plt.xticks(comp_file['Year'], rotation=(45))\n",
     "plt.grid()\n",
-    "plt.savefig('output_data/cal_vs_Tex_Death.png')\n",
+    "plt.savefig('../images/Ca-vs-Tx/cal_vs_Tex_Death.png')\n",
     "plt.show()"
    ]
   },
@@ -125,8 +140,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python_defaultSpec_1598392385483",
-   "display_name": "Python 3.6.10 64-bit ('PythonData': conda)"
+   "name": "python3",
+   "display_name": "Python 3.6.10 64-bit ('PythonData': conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "4f97d6c61d8a7f21bf92f8d2cb93500af9474aabc8c0feaf9209aca205545b76"
+    }
+   }
   }
  },
  "nbformat": 4,
