--- a/notebooks/final_analysis.ipynb
+++ b/notebooks/final_analysis.ipynb
@@ -10,12 +10,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10-final"
+   "version": "3.6.10"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1598392387658",
-   "display_name": "Python 3.6.10 64-bit"
+   "name": "python3",
+   "display_name": "Python 3.6.10 64-bit ('PythonData': conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "4f97d6c61d8a7f21bf92f8d2cb93500af9474aabc8c0feaf9209aca205545b76"
+    }
+   }
   }
  },
  "nbformat": 4,
@@ -25,27 +30,60 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "         State  Year  Deaths  Population  Crude Rate  Total Background Laws  \\\n9   California  2008    3084    36604337         8.4                   11.0   \n10  California  2009    3010    36961229         8.1                   11.0   \n11  California  2010    2858    37253956         7.7                   11.0   \n12  California  2011    2904    37691912         7.7                   11.0   \n13  California  2012    2941    38041430         7.7                   11.0   \n14  California  2013    2918    38332521         7.6                   11.0   \n15  California  2014    2838    38802500         7.3                   11.0   \n16  California  2015    2984    39144818         7.6                   11.0   \n17  California  2016    3098    39250017         7.9                   11.0   \n18  California  2017    3083    39536653         7.8                   11.0   \n\n    Total Guns Laws  Deaths Percent  \n9              93.0           0.008  \n10             93.0           0.008  \n11             93.0           0.008  \n12             94.0           0.008  \n13             95.0           0.008  \n14             99.0           0.008  \n15            100.0           0.007  \n16            102.0           0.008  \n17            104.0           0.008  \n18            106.0           0.008  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>State</th>\n      <th>Year</th>\n      <th>Deaths</th>\n      <th>Population</th>\n      <th>Crude Rate</th>\n      <th>Total Background Laws</th>\n      <th>Total Guns Laws</th>\n      <th>Deaths Percent</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>9</th>\n      <td>California</td>\n      <td>2008</td>\n      <td>3084</td>\n      <td>36604337</td>\n      <td>8.4</td>\n      <td>11.0</td>\n      <td>93.0</td>\n      <td>0.008</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>California</td>\n      <td>2009</td>\n      <td>3010</td>\n      <td>36961229</td>\n      <td>8.1</td>\n      <td>11.0</td>\n      <td>93.0</td>\n      <td>0.008</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>California</td>\n      <td>2010</td>\n      <td>2858</td>\n      <td>37253956</td>\n      <td>7.7</td>\n      <td>11.0</td>\n      <td>93.0</td>\n      <td>0.008</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>California</td>\n      <td>2011</td>\n      <td>2904</td>\n      <td>37691912</td>\n      <td>7.7</td>\n      <td>11.0</td>\n      <td>94.0</td>\n      <td>0.008</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>California</td>\n      <td>2012</td>\n      <td>2941</td>\n      <td>38041430</td>\n      <td>7.7</td>\n      <td>11.0</td>\n      <td>95.0</td>\n      <td>0.008</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>California</td>\n      <td>2013</td>\n      <td>2918</td>\n      <td>38332521</td>\n      <td>7.6</td>\n      <td>11.0</td>\n      <td>99.0</td>\n      <td>0.008</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>California</td>\n      <td>2014</td>\n      <td>2838</td>\n      <td>38802500</td>\n      <td>7.3</td>\n      <td>11.0</td>\n      <td>100.0</td>\n      <td>0.007</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>California</td>\n      <td>2015</td>\n      <td>2984</td>\n      <td>39144818</td>\n      <td>7.6</td>\n      <td>11.0</td>\n      <td>102.0</td>\n      <td>0.008</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>California</td>\n      <td>2016</td>\n      <td>3098</td>\n      <td>39250017</td>\n      <td>7.9</td>\n      <td>11.0</td>\n      <td>104.0</td>\n      <td>0.008</td>\n    </tr>\n    <tr>\n      <th>18</th>\n      <td>California</td>\n      <td>2017</td>\n      <td>3083</td>\n      <td>39536653</td>\n      <td>7.8</td>\n      <td>11.0</td>\n      <td>106.0</td>\n      <td>0.008</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 1
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# import all dependancies\n",
     "import pandas as pd\n",
     "import os\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy.stats as st\n",
     "from scipy.stats import linregress\n",
-    "import numpy as np\n",
-    "\n",
-    "tex_file_path = \"Resources/tex_comp_data.csv\"\n",
-    "cal_file_path = \"Resources/cal_comp_data.csv\"\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "         State  Year  Deaths  Population  Crude Rate  Total Background Laws  \\\n",
+       "9   California  2008    3084    36604337         8.4                   11.0   \n",
+       "10  California  2009    3010    36961229         8.1                   11.0   \n",
+       "11  California  2010    2858    37253956         7.7                   11.0   \n",
+       "12  California  2011    2904    37691912         7.7                   11.0   \n",
+       "13  California  2012    2941    38041430         7.7                   11.0   \n",
+       "14  California  2013    2918    38332521         7.6                   11.0   \n",
+       "15  California  2014    2838    38802500         7.3                   11.0   \n",
+       "16  California  2015    2984    39144818         7.6                   11.0   \n",
+       "17  California  2016    3098    39250017         7.9                   11.0   \n",
+       "18  California  2017    3083    39536653         7.8                   11.0   \n",
+       "\n",
+       "    Total Guns Laws  Deaths Percent  \n",
+       "9              93.0           0.008  \n",
+       "10             93.0           0.008  \n",
+       "11             93.0           0.008  \n",
+       "12             94.0           0.008  \n",
+       "13             95.0           0.008  \n",
+       "14             99.0           0.008  \n",
+       "15            100.0           0.007  \n",
+       "16            102.0           0.008  \n",
+       "17            104.0           0.008  \n",
+       "18            106.0           0.008  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>State</th>\n      <th>Year</th>\n      <th>Deaths</th>\n      <th>Population</th>\n      <th>Crude Rate</th>\n      <th>Total Background Laws</th>\n      <th>Total Guns Laws</th>\n      <th>Deaths Percent</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>9</th>\n      <td>California</td>\n      <td>2008</td>\n      <td>3084</td>\n      <td>36604337</td>\n      <td>8.4</td>\n      <td>11.0</td>\n      <td>93.0</td>\n      <td>0.008</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>California</td>\n      <td>2009</td>\n      <td>3010</td>\n      <td>36961229</td>\n      <td>8.1</td>\n      <td>11.0</td>\n      <td>93.0</td>\n      <td>0.008</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>California</td>\n      <td>2010</td>\n      <td>2858</td>\n      <td>37253956</td>\n      <td>7.7</td>\n      <td>11.0</td>\n      <td>93.0</td>\n      <td>0.008</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>California</td>\n      <td>2011</td>\n      <td>2904</td>\n      <td>37691912</td>\n      <td>7.7</td>\n      <td>11.0</td>\n      <td>94.0</td>\n      <td>0.008</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>California</td>\n      <td>2012</td>\n      <td>2941</td>\n      <td>38041430</td>\n      <td>7.7</td>\n      <td>11.0</td>\n      <td>95.0</td>\n      <td>0.008</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>California</td>\n      <td>2013</td>\n      <td>2918</td>\n      <td>38332521</td>\n      <td>7.6</td>\n      <td>11.0</td>\n      <td>99.0</td>\n      <td>0.008</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>California</td>\n      <td>2014</td>\n      <td>2838</td>\n      <td>38802500</td>\n      <td>7.3</td>\n      <td>11.0</td>\n      <td>100.0</td>\n      <td>0.007</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>California</td>\n      <td>2015</td>\n      <td>2984</td>\n      <td>39144818</td>\n      <td>7.6</td>\n      <td>11.0</td>\n      <td>102.0</td>\n      <td>0.008</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>California</td>\n      <td>2016</td>\n      <td>3098</td>\n      <td>39250017</td>\n      <td>7.9</td>\n      <td>11.0</td>\n      <td>104.0</td>\n      <td>0.008</td>\n    </tr>\n    <tr>\n      <th>18</th>\n      <td>California</td>\n      <td>2017</td>\n      <td>3083</td>\n      <td>39536653</td>\n      <td>7.8</td>\n      <td>11.0</td>\n      <td>106.0</td>\n      <td>0.008</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
+   "source": [
+    "# upload csv files and read into pandas dataframe\n",
+    "tex_file_path = \"../Resources/tex_comp_data.csv\"\n",
+    "cal_file_path = \"../Resources/cal_comp_data.csv\"\n",
     "tex_file_df = pd.read_csv(tex_file_path)\n",
     "cal_file_df = pd.read_csv(cal_file_path)\n",
     "tex_file_df.head()\n",
@@ -119,7 +157,9 @@
     "# plt.yticks(np.arange(7, 13, step = 0.25), fontsize = 14)\n",
     "plt.legend(loc = 'best', fontsize = 14)\n",
     "plt.grid()\n",
-    "plt.savefig('output_data/cal_tex_death_percent.png')\n",
+    "\n",
+    "# save figure\n",
+    "plt.savefig('../images/Ca-vsTx/cal_tex_death_percent.png')\n",
     "plt.show()"
    ]
   },
@@ -167,6 +207,7 @@
     }
    ],
    "source": [
+    "# line regression for California gun laws vs gun related-death percent\n",
     "x_axis = cal_file_df['Total Guns Laws']\n",
     "y_axis = cal_file_df['Deaths Percent']\n",
     "(slope, intercept, rvalue, pvalue, stderr) = linregress(x_axis, y_axis)\n",
@@ -180,7 +221,9 @@
     "plt.title('California Total Guns Laws vs Deaths Percent')\n",
     "print(f\"R squared is: {rvalue**2}\")\n",
     "print(line_eq)\n",
-    "plt.savefig('output_data/cal_gun_death_percent.png')\n",
+    "\n",
+    "# save figure\n",
+    "plt.savefig('../images/California/cal_gun_death_percent.png')\n",
     "plt.show()"
    ]
   },
@@ -228,6 +271,7 @@
     }
    ],
    "source": [
+    "# line regression for Texas gun laws vs gun related-death percent\n",
     "x_axis = tex_file_df['Total Guns Laws']\n",
     "y_axis = tex_file_df['Deaths Percent']\n",
     "(slope, intercept, rvalue, pvalue, stderr) = linregress(x_axis, y_axis)\n",
@@ -241,7 +285,9 @@
     "plt.title('Texas Total Guns Laws vs Deaths Percent')\n",
     "print(f\"R squared is: {rvalue**2}\")\n",
     "print(line_eq)\n",
-    "plt.savefig('output_data/tex_gun_death_percent.png')\n",
+    "\n",
+    "# save figure\n",
+    "plt.savefig('../images/Texas/tex_gun_death_percent.png')\n",
     "plt.show()"
    ]
   },
@@ -270,6 +316,7 @@
     }
    ],
    "source": [
+    "# line regression for California gun laws vs gun related-death\n",
     "x_axis = cal_file_df['Total Guns Laws']\n",
     "y_axis = cal_file_df['Deaths']\n",
     "(slope, intercept, rvalue, pvalue, stderr) = linregress(x_axis, y_axis)\n",
@@ -283,7 +330,9 @@
     "plt.title('California Total Guns Laws vs Deaths')\n",
     "print(f\"R squared is: {rvalue**2}\")\n",
     "print(line_eq)\n",
-    "plt.savefig('output_data/cal_gun_deaths.png')\n",
+    "\n",
+    "# save figure\n",
+    "plt.savefig('../images/California/cal_gun_deaths.png')\n",
     "plt.show()"
    ]
   },
@@ -312,6 +361,7 @@
     }
    ],
    "source": [
+    "# line regression for California gun laws vs gun related-death\n",
     "x_axis = tex_file_df['Total Guns Laws']\n",
     "y_axis = tex_file_df['Deaths']\n",
     "(slope, intercept, rvalue, pvalue, stderr) = linregress(x_axis, y_axis)\n",
@@ -325,7 +375,9 @@
     "plt.title('Texas Total Guns Laws vs Deaths')\n",
     "print(f\"R squared is: {rvalue**2}\")\n",
     "print(line_eq)\n",
-    "plt.savefig('output_data/tex_gun_deaths.png')\n",
+    "\n",
+    "# save figure\n",
+    "plt.savefig('../images/Texas/tex_gun_deaths.png')\n",
     "plt.show()"
    ]
   },
@@ -363,7 +415,7 @@
     }
    ],
    "source": [
-    "# T-test for California. Total Background Laws vs Death Percent.\n",
+    "# T-test for Texas. Total Background Laws vs Death Percent.\n",
     "st.ttest_ind(tex_file_df['Total Background Laws'], tex_file_df['Deaths Percent'], equal_var=False)"
    ]
   },
@@ -382,6 +434,7 @@
     }
    ],
    "source": [
+    "# Chisquare test for Texas. Total Guns Laws vs Death Percent.\n",
     "st.chisquare(tex_file_df['Total Guns Laws'], tex_file_df['Deaths Percent'])"
    ]
   },
@@ -400,6 +453,7 @@
     }
    ],
    "source": [
+    "# Chisquare test for California. Total Guns Laws vs Death Percent.\n",
     "st.chisquare(cal_file_df['Total Guns Laws'], cal_file_df['Deaths Percent'])"
    ]
   },
