--- a/notebooks/guns_mortality_data.ipynb
+++ b/notebooks/guns_mortality_data.ipynb
@@ -14,13 +14,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import dependancies\n",
     "import pandas as pd\n",
     "import os\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy.stats as st\n",
     "from scipy.stats import linregress\n",
     "import numpy as np\n",
-    "output_file = \"Resources/guns_state.csv\""
+    "\n",
+    "# create file path to save refined data file\n",
+    "output_file = \"../Resources/guns_state.csv\""
    ]
   },
   {
@@ -39,7 +42,8 @@
     }
    ],
    "source": [
-    "file_path = \"Resources/data_table.csv\"\n",
+    "# upload raw data and read into pandas dataframe\n",
+    "file_path = \"../Resources/data_table.csv\"\n",
     "guns_death_rate = pd.read_csv(file_path)\n",
     "guns_death_rate.head()"
    ]
@@ -60,8 +64,11 @@
     }
    ],
    "source": [
+    "# data clean up and select only texas and california\n",
     "columns = ['YEAR', 'STATE', 'RATE', 'DEATHS']\n",
     "tx_vs_ca_df = guns_death_rate.loc[(guns_death_rate['STATE'] == 'TX')|(guns_death_rate['STATE'] == 'CA'), columns]\n",
+    "\n",
+    "# save data file\n",
     "tx_vs_ca_df.to_csv(output_file, index=False)\n",
     "tx_vs_ca_df.head()"
    ]
@@ -84,6 +91,7 @@
     }
    ],
    "source": [
+    "# create bar plot for gun related death rate\n",
     "tx_vs_ca_df.plot.bar(x='YEAR')\n",
     "plt.title('Texas vs California Guns-Related Death Rate and Numbers')\n",
     "plt.xlabel('State')\n",
