--- a/notebooks/laws_final.ipynb
+++ b/notebooks/laws_final.ipynb
@@ -36,7 +36,7 @@
    ],
    "source": [
     "# Read in raw data csv file and create dataframe\n",
-    "data = 'resources/raw_data.csv'\n",
+    "data = 'Resources/raw_data.csv'\n",
     "data_df = pd.read_csv(data)\n",
     "data_df.head(10)"
    ]
@@ -4197,7 +4197,7 @@
     "plt.yticks(fontsize = 14)\n",
     "plt.legend(loc = 'best', fontsize = 14)\n",
     "plt.grid()\n",
-    "plt.savefig('output_data/cal_tex_pop.png')\n",
+    "plt.savefig('../images/Ca-vs-Tx/cal_tex_pop.png')\n",
     "plt.show()"
    ]
   },
@@ -4233,7 +4233,7 @@
     "plt.yticks(np.arange(0, 120, step = 5), fontsize = 14)\n",
     "plt.legend(loc = 'best', fontsize = 14)\n",
     "plt.grid()\n",
-    "plt.savefig('output_data/caltex_gun_laws.png')\n",
+    "plt.savefig('../images/Ca-vs-Tx/caltex_gun_laws.png')\n",
     "plt.show()"
    ]
   },
@@ -4281,7 +4281,7 @@
     "plt.yticks(np.arange(0, 120, step = 10), fontsize = 14)\n",
     "plt.legend(loc = 'best', fontsize = 14)\n",
     "plt.grid()\n",
-    "plt.savefig('output_data/caltex_mass_shooting.png')\n",
+    "plt.savefig('../images/Ca-vs-Tx/caltex_mass_shooting.png')\n",
     "plt.show()"
    ]
   },
@@ -4315,7 +4315,7 @@
     "plt.yticks(np.arange(0, 120, step = 10), fontsize = 14)\n",
     "plt.legend(loc = 'best', fontsize = 14)\n",
     "plt.grid()\n",
-    "plt.savefig('output_data/Texas_Cal_mass_shooting.png')\n",
+    "plt.savefig('../images/Ca-vs-Tx/Texas_Cal_mass_shooting.png')\n",
     "plt.show()"
    ]
   },
@@ -4349,7 +4349,7 @@
     "plt.yticks(np.arange(2000, 3600, step = 100), fontsize = 14)\n",
     "plt.legend(loc = 'best', fontsize = 14)\n",
     "plt.grid()\n",
-    "plt.savefig('output_data/cal_tex_deaths.png')\n",
+    "plt.savefig('../images/Ca-vs-Tx/cal_tex_deaths.png')\n",
     "plt.show()"
    ]
   },
@@ -4383,7 +4383,7 @@
     "plt.yticks(np.arange(7, 13, step = 0.25), fontsize = 14)\n",
     "plt.legend(loc = 'best', fontsize = 14)\n",
     "plt.grid()\n",
-    "plt.savefig('output_data/cal_tex_death_rate.png')\n",
+    "plt.savefig('../images/Ca-vs-Tx/cal_tex_death_rate.png')\n",
     "plt.show()"
    ]
   },
@@ -4438,7 +4438,7 @@
     "plt.axvline(y_cal_bgck.mean(), color='k', linestyle='dashed', linewidth=1)\n",
     "plt.axvline(cal_death_rate.mean(), color='k', linestyle='dashed', linewidth=1)\n",
     "plt.legend(loc = 'best', fontsize = 14)\n",
-    "plt.savefig('output_data/cal_bgck_death_hist.png')\n",
+    "plt.savefig('../images/California/cal_bgck_death_hist.png')\n",
     "    \n",
     "# T-test\n",
     "stats.ttest_ind(y_cal_bgck, cal_death_rate, equal_var=False)"
@@ -4495,7 +4495,7 @@
     "plt.axvline(y_tex_bgck.mean(), color='k', linestyle='dashed', linewidth=1)\n",
     "plt.axvline(tex_death_rate.mean(), color='k', linestyle='dashed', linewidth=1)\n",
     "plt.legend(loc = 'best', fontsize = 14)\n",
-    "plt.savefig('output_data/tex_bgck_death_hist.png')\n",
+    "plt.savefig('../images/Texas/tex_bgck_death_hist.png')\n",
     "    \n",
     "# T-test\n",
     "stats.ttest_ind(y_tex_bgck, tex_death_rate, equal_var=False)"
@@ -4552,7 +4552,7 @@
     "plt.axvline(y_cal_laws.mean(), color='k', linestyle='dashed', linewidth=1)\n",
     "plt.axvline(cal_death_rate.mean(), color='k', linestyle='dashed', linewidth=1)\n",
     "plt.legend(loc = 'best', fontsize = 14)\n",
-    "plt.savefig('output_data/cal_totlaw_death_hist.png')\n",
+    "plt.savefig('../images/Caifornia/cal_totlaw_death_hist.png')\n",
     "    \n",
     "# T-test\n",
     "stats.ttest_ind(y_cal_laws, cal_death_rate, equal_var=False)"
@@ -4609,7 +4609,7 @@
     "plt.axvline(y_tex_laws.mean(), color='k', linestyle='dashed', linewidth=1)\n",
     "plt.axvline(tex_death_rate.mean(), color='k', linestyle='dashed', linewidth=1)\n",
     "plt.legend(loc = 'best', fontsize = 14)\n",
-    "plt.savefig('output_data/tex_totlaw_death_hist.png')\n",
+    "plt.savefig('../images/Texas/tex_totlaw_death_hist.png')\n",
     "    \n",
     "# T-test\n",
     "stats.ttest_ind(y_tex_laws, tex_death_rate, equal_var=False)"
@@ -4718,7 +4718,7 @@
     "tex_comp_data = pd.merge(tex_death_df, tex_laws, how='left', on=['Year', 'State'])\n",
     "tex_comp_data = tex_comp_data.dropna()\n",
     "tex_comp_data['Deaths Percent'] = round((tex_comp_data['Deaths']/tex_comp_data['Population'])*100, 3)\n",
-    "tex_comp_data.to_csv('Resources/tex_comp_data.csv', index=False)\n",
+    "tex_comp_data.to_csv('../Resources/tex_comp_data.csv', index=False)\n",
     "tex_comp_data.tail()"
    ]
   },
@@ -4801,7 +4801,7 @@
     "cal_comp_data = pd.merge(cal_death_df, cal_laws, how='left', on=['Year', 'State'])\n",
     "cal_comp_data = cal_comp_data.dropna()\n",
     "cal_comp_data['Deaths Percent'] = round((cal_comp_data['Deaths']/cal_comp_data['Population'])*100, 3)\n",
-    "cal_comp_data.to_csv('Resources/cal_comp_data.csv', index=False)\n",
+    "cal_comp_data.to_csv('../Resources/cal_comp_data.csv', index=False)\n",
     "cal_comp_data.tail()"
    ]
   },
