--- a/notebooks/pop_last_10years.ipynb
+++ b/notebooks/pop_last_10years.ipynb
@@ -13,12 +13,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import all dependancies\n",
     "import pandas as pd\n",
     "import os\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy.stats as st\n",
     "from scipy.stats import linregress\n",
     "import numpy as np\n",
+    "\n",
+    "# file path to save refined data\n",
     "output_file = \"Resources/pop_data.csv\""
    ]
   },
@@ -38,6 +41,7 @@
     }
    ],
    "source": [
+    "# upload file and read into pandas dataframe\n",
     "file_path = \"Resources/nst-est2019-alldata.csv\"\n",
     "pop_est = pd.read_csv(file_path)\n",
     "pop_est.head()"
@@ -59,8 +63,8 @@
     }
    ],
    "source": [
+    "#  data clean up\n",
     "clean_data = pop_est.loc[:, ['NAME', 'POPESTIMATE2010', 'POPESTIMATE2011', 'POPESTIMATE2012', 'POPESTIMATE2013', 'POPESTIMATE2014', 'POPESTIMATE2015', 'POPESTIMATE2016', 'POPESTIMATE2017', 'POPESTIMATE2018', 'POPESTIMATE2019']]              \n",
-    "\n",
     "clean_data.tail()"
    ]
   },
@@ -80,10 +84,12 @@
     }
    ],
    "source": [
+    "# select California and Texas only\n",
     "tx_vs_ca_df = clean_data.loc[(clean_data['NAME'] == 'Texas')|(clean_data['NAME'] == 'California')]\n",
     "tx_vs_ca = tx_vs_ca_df.rename(columns={'NAME': 'State', 'POPESTIMATE2010': 'Population 2010', 'POPESTIMATE2011': 'Population 2011', 'POPESTIMATE2012': 'Population 2012',\t'POPESTIMATE2013': 'Population 2013', 'POPESTIMATE2014': 'Population 2014',\t'POPESTIMATE2015': 'Population 2015', 'POPESTIMATE2016': 'Population 2016',\t'POPESTIMATE2017': 'Population 2017', 'POPESTIMATE2018': 'Population 2018', 'POPESTIMATE2019': 'Population 2019'})\n",
     "# tx_vs_ca = tx_vs_ca.reset_index()\n",
-    "tx_vs_ca = tx_vs_ca\n",
+    "\n",
+    "# save file \n",
     "tx_vs_ca.to_csv(output_file, index=False)\n",
     "tx_vs_ca.head()"
    ]
@@ -106,11 +112,12 @@
     }
    ],
    "source": [
+    "# bar plot for states population\n",
     "tx_vs_ca.plot.bar()\n",
     "plt.title('Texas vs California Population Last Ten Years')\n",
     "plt.xlabel('State')\n",
     "plt.ylabel('Population (10mil)')\n",
-    "plt.savefig('output_data/tex_vs_cal_population.png')\n",
+    "plt.savefig('../images/Ca-vs-Tx/tex_vs_cal_population.png')\n",
     "plt.show()"
    ]
   },
